# labpcn

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README  mnist.py  pcn.py  pima.py
cmake/: CMakeLists.txt.in
src/: Parallel.cpp  Parallel.h  Perceptron.cpp  Perceptron.h  TrainingData.cpp  TrainingData.h  main.cpp
src/io_utility/: io_utility.h
